--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,6 @@ version = "0.1.0"
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
