--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ name = "browser_pilot"
 version = "0.1.0"
 
 [tool.setuptools.packages.find]
-where = ["src"]
+where = ["."]
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
