--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-playwright==1.40.0
-asyncio>=3.4.3
-fastapi>=0.95.0
-uvicorn>=0.21.0
-pydantic>=1.10.7
-requests>=2.28.0
+playwright
+asyncio
+fastapi
+uvicorn
+pydantic
+requests
+aiohttp
+websockets
+pytest
+pytest-asyncio
+msgpack
+zstandard
+uvloop
